# bld-ai-beT

./: README.md  pyproject.toml
musicplatform/: .gitignore  manage.py  pyproject.toml  pytest.ini
musicplatform/albums/: admin.py  filters.py  models.py  serilaizer.py  tasks.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_album_approved.py  0003_song.py  0004_alter_song_image.py  0005_song_audio.py  0006_alter_song_audio.py  0007_song_album_alter_song_audio_alter_song_name.py
musicplatform/albums/tests/: test_serializers.py
musicplatform/artists/: admin.py  models.py  serilaizer.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py
musicplatform/artists/tests/: test_views.py
musicplatform/authentication/: permissions.py  serilaizer.py  urls.py  views.py
musicplatform/musicplatform/: RESULTS.md  celery.py  permissions.py  settings.py  urls.py
musicplatform/users/: admin.py  models.py
