[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = "Django Training - 1"
authors = ["Ahmed Mohamed Kamel <ahmedmohamedkamel06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-dotenv = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
